--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,13 +6,12 @@ services:
       context: node
     container_name: app
     entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
+    command: node index.js
     networks:
       - node-network
     volumes:
       - ./node:/usr/src/app
     tty: true
-    ports:
-      - "3000:3000"
     depends_on:
       - db
     
@@ -30,7 +29,18 @@ services:
     networks:
       - node-network
 
+  nginx:
+    restart: always
+    build:
+      context: nginx
+    networks:
+      - node-network
+    ports:
+      - "8080:80"
+
 
 networks:
   node-network:
     driver: bridge
+  
+    
