--- a/node/dockerfile
+++ b/node/dockerfile
@@ -9,4 +9,10 @@ RUN apt-get update \
     && wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
     && apt-get autoremove -yqq --purge wget && rm -rf /var/lib/apt/lists/*
 
+RUN npm install express    
+RUN npm install mysql
+
+
+ENTRYPOINT [ "node", "index.js" ]
+
 EXPOSE 3000
